[package]
name = "draw-script"
version = "0.1.0"
authors = ["Woshiluo Luo <woshiluo.luo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.4.2"

rand = "0.8.0"

reqwest = { version = "0.11", features = ["blocking", "json"] }
websocket = "0.26.2"
url = "2.2.2"

log = "0.4.11"
pretty_env_logger = "0.4.0"

threadpool = "1.8.1"
