[package]
name = "draw-script"
version = "0.1.0"
authors = ["Woshiluo Luo <woshiluo.luo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.5.11"

rand = "0.8.5"

reqwest = { version = "0.11", features = ["blocking", "json"] }
tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"

log = "0.4.17"
pretty_env_logger = "0.4.0"

threadpool = "1.8.1"
